--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <header class="section-header">
           <h3>About Us</h3>
           <p>Taukah kalian ini weebsite pertama saya weebsite ini akan berisi komik-komik anime dan semoga weebsite bisa terus berkembang dan semoga banyak peminat yang pembaca komik di Mangan Well ini. </p>
+		<p>dan perkenalkan nama saya Fathur rahman s. atau dipanggil fatur  saya lahir pada tanggal 02-februari-2004 . tinggal di Desa Damit Rt 04 atau di Indonesia kota Tanah Grogot, kalimantan timur dan saya sekolah di SMKN 1 Tanah Grogot kelas XI (2020) dan mengambil jurusan Rekayasa Perangkat Lunak (RPL). Terima Kasih :). </p>
         </header>
 
          <section id="komik">
@@ -189,11 +190,8 @@
             </p>
 
             <div class="social-links">
-              <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
               <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
               <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-              <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
             </div>
 
           </div>
