--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
          <section id="komik">
       <div class="container">
         <div class="section-header">
+		<h3>Tentang</h3>
           <h3>Komik</h3>
           <p>Komik ini Tersedia dari Manga, Manhua, Manhwa atau jepang, cina, korea.</p>
         </div>
@@ -168,7 +169,7 @@
 
           <div class="col-lg-4 col-md-6 footer-info">
             <h3>Manga Well</h3>
-            <p>Manga Well tersedia banyak fitur komik-komik manga,manhua,manhwa dan semoga dengan weebsite ini banyak peminat pembaca.</p>
+            <p>Manga Well ini masih dalam tahapan pembuatan jadi masih tentang komik.</p>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
