--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@
             <ul>
               <li><a href="#">Home</a></li>
               <li><a href="#">About us</a></li>
+		     <li><a href="#">Komik</a></li>
+		     <li><a href="#">Contact us</a></li>
             </ul>
           </div>
 
@@ -191,8 +193,8 @@
             </p>
 
             <div class="social-links">
-              <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-              <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
+              <a href="https://web.facebook.com/Fatur Rahman" class="facebook"><i class="fa fa-facebook"></i></a>
+              <a href="https//www.instagram.com/fatur9319" class="instagram"><i class="fa fa-instagram"></i></a>
             </div>
 
           </div>
