--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 
           <div class="col-lg-3 col-md-6 wow fadeInUp">
             <div class="member">
-              <h4>Manga</h4>
+              <h4>1.Manga</h4>
               <img src="img/komik 1.png" class="img-fluid" alt="">
-              <img src="img/komik 1.jpg" class="img-fluid" alt="">
+              <img src="img/komik 1.jpg" width="350px" height="197px"class="img-fluid" alt="">
                   <p>Attack on Titan berkisah tentang suatu zaman dimana umat manusia menghadapi ancaman kepunahan akibat serangan para Titan (manusia raksasa). Yang mengerikan adalah para Titan ini benar-benar sengaja mengincar manusia untuk “dimakannya”.</p>
              </div>
          </div>
@@ -86,18 +86,18 @@
 
  <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
-              <h4>Manhua</h4>
+              <h4>2.Manhua</h4>
               <img src="img/komik 2.png" class="img-fluid" alt="">
-              <img src="img/komik 3.jpg" class="img-fluid" alt="">
+              <img src="img/komik 3.jpg" width="350px" height="197px"class="img-fluid" alt="">
                   <p>Apotheosis berawal dengan kisah Luo Zheng, putra pertama keluarga Luo yang kehilangan segalanya setelah ayahnya meninggal dunia. Keluarga pamannya mengambil alih status dan kedudukan sebagai keluarga utama Luo. ... Luo Zheng menyembunyikan sebuah buku usang peninggalan ayahnya dan berusaha untuk menjadi kuat.</p>
           </div>
       </div>
 
   <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="member">
-              <h4>Manhwa</h4>
+              <h4>3.Manhwa</h4>
               <img src="img/komik 3.png" class="img-fluid" alt="">
-              <img src="img/komik 2.jpg" class="img-fluid" alt="">
+              <img src="img/komik 2.jpg" width="350px" height="197px"class="img-fluid" alt="">
                   <p>Solo Leveling, Komik ini memiliki latar cerita tentang terbukanya “gate” atau gerbang antara dunia nyata dan juga dunia monster. Diantara banyaknya manusia, ada beberapa yang diberi kemampuan khusus untuk membasmi para monster di dalam gate tersebut.</p>
               </div>
           </div>
