--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
         <header class="section-header">
           <h3>About Us</h3>
           <p>Taukah kalian ini weebsite pertama saya weebsite ini akan berisi komik-komik anime dan semoga weebsite bisa terus berkembang dan semoga banyak peminat yang pembaca komik di Mangan Well ini. </p>
+	<h3>Tentang Saya
 		<p>dan perkenalkan nama saya Fathur rahman s. atau dipanggil fatur  saya lahir pada tanggal 02-februari-2004 . tinggal di Desa Damit Rt 04 atau di Indonesia kota Tanah Grogot, kalimantan timur dan saya sekolah di SMKN 1 Tanah Grogot kelas XI (2020) dan mengambil jurusan Rekayasa Perangkat Lunak (RPL). Terima Kasih :). </p>
         </header>
 
          <section id="komik">
       <div class="container">
         <div class="section-header">
-		<h3>Tentang</h3>
           <h3>Komik</h3>
           <p>Komik ini Tersedia dari Manga, Manhua, Manhwa atau jepang, cina, korea.</p>
         </div>
@@ -197,7 +197,7 @@
            
             </div>
 
-          </div>
+          </div> 
 
         </div>
       </div>
@@ -207,6 +207,10 @@
 
     </div>
   </footer>
+	      <footer>
+		      Fathur Rahman S.
+		      <p>Powered by <a href="https://gamelab.id" target="_blank">GameLab.id</a></p>
+       </footer>
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
