--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Manga Well</title>
-	 <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta charset="utf-8">
+  <title>Manga Well</title>
+   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
 
@@ -61,46 +61,46 @@
         <header class="section-header">
           <h3>About Us</h3>
           <p>Taukah kalian ini weebsite pertama saya weebsite ini akan berisi komik-komik anime dan semoga weebsite bisa terus berkembang dan semoga banyak peminat yang pembaca komik di Mangan Well ini. </p>
-	<h3>Tentang Saya
-		<p>dan perkenalkan nama saya Fathur rahman s. atau dipanggil fatur  saya lahir pada tanggal 02-februari-2004 . tinggal di Desa Damit Rt 04 atau di Indonesia kota Tanah Grogot, kalimantan timur dan saya sekolah di SMKN 1 Tanah Grogot kelas XI (2020) dan mengambil jurusan Rekayasa Perangkat Lunak (RPL). Terima Kasih :). </p>
+<div class="row">
+            <div class="member">
+  <h3>Tentang Saya</h3>
+  <img src="img/white.jpg" width="380px" height="197px" class="img-fluid" alt="">
+    <img src="img/photo.jpg" width="350px" height="197px" class="img-fluid" alt="">
+    <img src="img/white.jpg" width="350px" height="197px" class="img-fluid" alt="">
+    <p>dan perkenalkan nama saya Fathur Rahman S. atau dipanggil Fatur  saya lahir pada tanggal 02-februari-2004 . tinggal di Desa Damit Rt 04 atau di Indonesia kota Tanah Grogot, kalimantan timur dan saya sekolah di SMKN 1 Tanah Grogot kelas XI (2020) dan mengambil jurusan Rekayasa Perangkat Lunak (RPL). Terima Kasih :). </p>
         </header>
+      </div>
+      </div>
 
          <section id="komik">
       <div class="container">
         <div class="section-header">
           <h3>Komik</h3>
-          <p>Komik ini Tersedia dari Manga, Manhua, Manhwa atau jepang, cina, korea.</p>
+          <p>Komik ini Tersedia dari Manga, Manhua atau jepang, cina.</p>
         </div>
 
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 wow fadeInUp">
+
             <div class="member">
-              <h4>1.Manga</h4>
+              <h3>1.Manga</h3>
               <img src="img/komik 1.png" class="img-fluid" alt="">
               <img src="img/komik 1.jpg" width="350px" height="197px"class="img-fluid" alt="">
-                  <p>Attack on Titan berkisah tentang suatu zaman dimana umat manusia menghadapi ancaman kepunahan akibat serangan para Titan (manusia raksasa). Yang mengerikan adalah para Titan ini benar-benar sengaja mengincar manusia untuk “dimakannya”.</p>
+              <img src="img/komik 1.png" class="img-fluid" alt="">
+                  <h3>Attack on Titan berkisah tentang suatu zaman dimana umat manusia menghadapi ancaman kepunahan akibat serangan para Titan (manusia raksasa). Yang mengerikan adalah para Titan ini benar-benar sengaja mengincar manusia untuk “dimakannya”.</h3>
              </div>
          </div>
-     </div>
 
- <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+
+
             <div class="member">
-              <h4>2.Manhua</h4>
+              <h3>2.Manhua</h3>
               <img src="img/komik 2.png" class="img-fluid" alt="">
               <img src="img/komik 3.jpg" width="350px" height="197px"class="img-fluid" alt="">
-                  <p>Apotheosis berawal dengan kisah Luo Zheng, putra pertama keluarga Luo yang kehilangan segalanya setelah ayahnya meninggal dunia. Keluarga pamannya mengambil alih status dan kedudukan sebagai keluarga utama Luo. ... Luo Zheng menyembunyikan sebuah buku usang peninggalan ayahnya dan berusaha untuk menjadi kuat.</p>
+              <img src="img/komik 2.png" class="img-fluid" alt="">
+                  <h3>Apotheosis berawal dengan kisah Luo Zheng, putra pertama keluarga Luo yang kehilangan segalanya setelah ayahnya meninggal dunia. Keluarga pamannya mengambil alih status dan kedudukan sebagai keluarga utama Luo. ... Luo Zheng menyembunyikan sebuah buku usang peninggalan ayahnya dan berusaha untuk menjadi kuat.</h3>
           </div>
       </div>
-
-  <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-            <div class="member">
-              <h4>3.Manhwa</h4>
-              <img src="img/komik 3.png" class="img-fluid" alt="">
-              <img src="img/komik 2.jpg" width="350px" height="197px"class="img-fluid" alt="">
-                  <p>Solo Leveling, Komik ini memiliki latar cerita tentang terbukanya “gate” atau gerbang antara dunia nyata dan juga dunia monster. Diantara banyaknya manusia, ada beberapa yang diberi kemampuan khusus untuk membasmi para monster di dalam gate tersebut.</p>
-              </div>
-          </div>
 
 </section>
 
@@ -131,7 +131,7 @@
 
             <div class="form">
               <div id="sendmessage">Your message has been sent. Thank you!</div>
-              <div id="errormessage"></div>
+              <div id="errormessage">error! please change your massage. Thank you!</div>
               <form action="" method="post" role="form" class="contactForm">
                 <div class="form-row">
                   <div class="form-group col-lg-6">
@@ -171,19 +171,11 @@
             <h3>Manga Well</h3>
             <p>Manga Well ini masih dalam tahapan pembuatan jadi masih tentang komik.</p>
           </div>
-
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About us</a></li>
-		     <li><a href="#">Komik</a></li>
-		     <li><a href="#">Contact us</a></li>
-            </ul>
-          </div>
-
+                    <div class="col-lg-4 col-md-6 footer-info">
+ <p>Powered by <a href="https://gamelab.id" target="_blank">GameLab.id</a></p>
+</div>
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h4>Contact Us</h4>
+            <h1>Contact Us</h1>
             <p>
               Fathur Rahman S. <br>
              Indonesia, kalimantan Timur, Tanah Grogot <br>
@@ -207,11 +199,7 @@
 
     </div>
   </footer>
-	      <footer>
-		      Fathur Rahman S.
-		      <p>Powered by <a href="https://gamelab.id" target="_blank">GameLab.id</a></p>
-       </footer>
-
+  
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
   <script src="lib/jquery/jquery.min.js"></script>
