--- a/index.html
+++ b/index.html
@@ -109,9 +109,8 @@
         <div class="section-header">
           <h3>Contact Us</h3>
         </div>
-
+        <center>
         <div class="row wow fadeInUp">
-
           <div class="col-lg-6">
             <div class="row">
               <div class="col-md-5 info">
@@ -128,7 +127,9 @@
                 <p>+62 821 5522 9073</p>
               </div>
             </div>
-
+          </div>
+        </div>
+      </center>
             <div class="form">
               <div id="sendmessage">Your message has been sent. Thank you!</div>
               <div id="errormessage">error! please change your massage. Thank you!</div>
@@ -199,6 +200,7 @@
 
     </div>
   </footer>
+
   
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
