--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="row">
             <div class="member">
   <h3>Tentang Saya</h3>
-  <img src="img/white.jpg" width="380px" height="197px" class="img-fluid" alt="">
+  <img src="img/white.jpg" width="390px" height="197px" class="img-fluid" alt="">
     <img src="img/photo.jpg" width="350px" height="197px" class="img-fluid" alt="">
     <img src="img/white.jpg" width="350px" height="197px" class="img-fluid" alt="">
     <p>dan perkenalkan nama saya Fathur Rahman S. atau dipanggil Fatur  saya lahir pada tanggal 02-februari-2004 . tinggal di Desa Damit Rt 04 atau di Indonesia kota Tanah Grogot, kalimantan timur dan saya sekolah di SMKN 1 Tanah Grogot kelas XI (2020) dan mengambil jurusan Rekayasa Perangkat Lunak (RPL). Terima Kasih :). </p>
@@ -85,9 +85,13 @@
             <div class="member">
               <h3>1.Manga</h3>
               <img src="img/komik 1.png" class="img-fluid" alt="">
-              <img src="img/komik 1.jpg" width="350px" height="197px"class="img-fluid" alt="">
+              <img src="img/komik 1.jpg" width="250px" height="197px"class="img-fluid" alt="">
               <img src="img/komik 1.png" class="img-fluid" alt="">
-                  <h3>Attack on Titan berkisah tentang suatu zaman dimana umat manusia menghadapi ancaman kepunahan akibat serangan para Titan (manusia raksasa). Yang mengerikan adalah para Titan ini benar-benar sengaja mengincar manusia untuk “dimakannya”.</h3>
+                  <p>Attack on Titan, adalah sebuah seri manga shōnen asal Jepang yang ditulis dan diilustrasikan oleh Hajime Isayama. Ceritanya berlatar di dunia tempat umat manusia hidup di wilayah yang dikelilingi tiga lapis tembok besar, yang melindungi mereka dari makhluk pemakan manusia berukuran raksasa yang dikenal sebagai Titan. Manga ini dimuat berseri dalam majalah Bessatsu Shōnen Magazine terbitan Kodansha sejak bulan September 2009, dan telah diterbitkan menjadi 34 volume tankōbon per bulan Desember 2020.
+
+Manga ini telah diadaptasi menjadi sebuah seri anime yang diproduksi oleh Wit Studio (musim 1–3) dan MAPPA (musim 4). Musim pertama yang terdiri dari 25 episode ditayangkan sejak bulan April hingga September 2013, diikuti oleh musim kedua sebanyak 12 episode dari bulan April hingga Juni 2017. Musim ketiga yang terdiri dari 22 episode ditayangkan menjadi dua bagian. 12 episode pertama ditayangkan sejak bulan Juli hingga Oktober 2018 dan 10 episode tersisa ditayangkan sejak bulan April hingga Juli 2019. Musim keempat sekaligus terakhir ditayangkan sejak bulan Desember 2020.
+
+Attack on Titan telah meraih kesuksesan kritis dan komersial. Per bulan Desember 2019, manga ini telah terjual sebanyak lebih dari 100 juta kopi dalam bentuk cetak di seluruh dunia, membuatnya menjadi salah satu seri manga terlaris sepanjang sejarah. Manga ini telah memenangkan beberapa penghargaan, seperti Penghargaan Manga Kodansha, Penghargaan Micheluzzi, dan Penghargaan Harvey.Adaptasi anime-nya diterima dengan baik oleh para kritikus, dan tiga musim pertamanya mendapatkan pengakuan kritis dan pujian terhadap alur cerita, animasi, musik, dan sulih suaranya. Anime-nya juga terbukti sangat sukses di AS dan Jepang, dan meningkatkan popularitas manga ini. Meskipun Attack on Titan juga menjadi populer di negara Asia lainnya, interpretasi politik atas manga ini menimbulkan kontroversi di Tiongkok dan Korea Selatan..</p>
              </div>
          </div>
 
@@ -96,22 +100,37 @@
             <div class="member">
               <h3>2.Manhua</h3>
               <img src="img/komik 2.png" class="img-fluid" alt="">
-              <img src="img/komik 3.jpg" width="350px" height="197px"class="img-fluid" alt="">
+              <img src="img/komik 3.jpg" width="250px" height="197px"class="img-fluid" alt="">
               <img src="img/komik 2.png" class="img-fluid" alt="">
-                  <h3>Apotheosis berawal dengan kisah Luo Zheng, putra pertama keluarga Luo yang kehilangan segalanya setelah ayahnya meninggal dunia. Keluarga pamannya mengambil alih status dan kedudukan sebagai keluarga utama Luo. ... Luo Zheng menyembunyikan sebuah buku usang peninggalan ayahnya dan berusaha untuk menjadi kuat.</h3>
+                  <p>Apotheosis berawal dengan kisah Luo Zheng, putra pertama keluarga Luo yang kehilangan segalanya setelah ayahnya meninggal dunia. Keluarga pamannya mengambil alih status dan kedudukan sebagai keluarga utama Luo. Sementara Luo Zheng dipenjara dan dijadikan sasaran untuk latihan bela diri bagi klan keluarganya sendiri.
+
+Selama dua tahun penuh, Luo Zheng dihajar habis-habisan, namun dia bertahan dengan gigih. Dia sama sekali tidak peduli meski dirinya dianggap sebagai budak dan dijadikan target latihan.
+
+Luo Zheng menyembunyikan sebuah buku usang peninggalan ayahnya dan berusaha untuk menjadi kuat. Tapi sayang usahanya tak membuahkan hasil. Karena kesal, dia pun membakar buku itu. Tapi tanpa diduga, Luo Zheng justru mendapatkan kekuatan yang luar biasa dari buku usang tersebut.
+
+Dunianya berubah ketika sepupunya mengatakan padanya bahwa Luo Yan, adiknya, dihukum oleh aliran Qing Yun dan diasingkan ke Gunung Api Penyucian untuk merenungkan kesalahan yang telah dilakukannya.
+
+Mendengar kabar itu, Luo Zheng bertekad untuk pergi meninggalkan klan Luo dan mencari satu-satunya orang yang paling dia sayangi. Dari sinilah perjalanan Luo Zheng untuk mencari adiknya dimulai!.</p>
           </div>
       </div>
 
 </section>
+
 
          <section id="contact">
       <div class="container-fluid">
         <div class="section-header">
           <h3>Contact Us</h3>
         </div>
-        <center>
+
         <div class="row wow fadeInUp">
           <div class="col-lg-6">
+             <div class="map mb-4 mb-lg-0">
+             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d145546.41985125525!2d116.22493606408459!3d-1.9221845578312566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2df049d8ab92a811%3A0xc3328b9836263e05!2sTanah%20Grogot%2C%20Kabupaten%20Paser%2C%20Kalimantan%20Timur!5e1!3m2!1sid!2sid!4v1608600578802!5m2!1sid!2sid" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
+          </div>
+
+           <div class="col-lg-6">
             <div class="row">
               <div class="col-md-5 info">
                 <i class="ion-ios-location-outline"></i>
@@ -127,9 +146,8 @@
                 <p>+62 821 5522 9073</p>
               </div>
             </div>
-          </div>
-        </div>
-      </center>
+
+
             <div class="form">
               <div id="sendmessage">Your message has been sent. Thank you!</div>
               <div id="errormessage">error! please change your massage. Thank you!</div>
@@ -168,13 +186,21 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-4 col-md-6 footer-info">
+          <div class="col-lg-6 col-md-6 footer-info">
             <h3>Manga Well</h3>
             <p>Manga Well ini masih dalam tahapan pembuatan jadi masih tentang komik.</p>
           </div>
-                    <div class="col-lg-4 col-md-6 footer-info">
- <p>Powered by <a href="https://gamelab.id" target="_blank">GameLab.id</a></p>
-</div>
+          <p>
+          </p>
+           <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Useful Links</h4>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About us</a></li>
+              <li><a href="#">komik</a></li>
+            </ul>
+          </div>
+
           <div class="col-lg-3 col-md-6 footer-contact">
             <h1>Contact Us</h1>
             <p>
@@ -197,7 +223,10 @@
     </div>
 
     <div class="container">
-
+   <div class="credits">
+        Powered by <a href="https://gamelab.id">GameLab.id</a>
+      </div>
+    </div>
     </div>
   </footer>
 
@@ -222,3 +251,4 @@
 
 </body>
 </html>
+
