--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@ Mendengar kabar itu, Luo Zheng bertekad untuk pergi meninggalkan klan Luo dan me
            <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">komik</a></li>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#about">About us</a></li>
+              <li><a href="#komik">komik</a></li>
             </ul>
           </div>
 
