--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Manga Well</title>
+  <style type="text/css">
+    .center {text-align: center;}
+    .justify {text-align: justify;}
+  </style>
    <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -60,14 +64,12 @@
 
         <header class="section-header">
           <h3>About Us</h3>
-          <p>Taukah kalian ini weebsite pertama saya weebsite ini akan berisi komik-komik anime dan semoga weebsite bisa terus berkembang dan semoga banyak peminat yang pembaca komik di Mangan Well ini. </p>
+          <p class:"justify">Taukah kalian ini weebsite pertama saya weebsite ini akan berisi komik-komik anime dan semoga weebsite bisa terus berkembang dan semoga banyak peminat yang pembaca komik di Mangan Well ini. </p>
 <div class="row">
             <div class="member">
   <h3>Tentang Saya</h3>
-  <img src="img/white.jpg" width="390px" height="197px" class="img-fluid" alt="">
-    <img src="img/photo.jpg" width="350px" height="197px" class="img-fluid" alt="">
-    <img src="img/white.jpg" width="350px" height="197px" class="img-fluid" alt="">
-    <p>dan perkenalkan nama saya Fathur Rahman S. atau dipanggil Fatur  saya lahir pada tanggal 02-februari-2004 . tinggal di Desa Damit Rt 04 atau di Indonesia kota Tanah Grogot, kalimantan timur dan saya sekolah di SMKN 1 Tanah Grogot kelas XI (2020) dan mengambil jurusan Rekayasa Perangkat Lunak (RPL). Terima Kasih :). </p>
+    <img src="img/photo.jpg" width="350px" height="197px" class="img-fluid" alt="center">
+    <p class:"justify">dan perkenalkan nama saya Fathur Rahman S. atau dipanggil Fatur  saya lahir pada tanggal 02-februari-2004 . tinggal di Desa Damit Rt 04 atau di Indonesia kota Tanah Grogot, kalimantan timur dan saya sekolah di SMKN 1 Tanah Grogot kelas XI (2020) dan mengambil jurusan Rekayasa Perangkat Lunak (RPL). Terima Kasih :). </p>
         </header>
       </div>
       </div>
@@ -76,7 +78,7 @@
       <div class="container">
         <div class="section-header">
           <h3>Komik</h3>
-          <p>Komik ini Tersedia dari Manga, Manhua atau jepang, cina.</p>
+          <p class:"justify">Komik ini Tersedia dari Manga, Manhua atau jepang, cina.</p>
         </div>
 
         <div class="row">
@@ -87,7 +89,7 @@
               <img src="img/komik 1.png" class="img-fluid" alt="">
               <img src="img/komik 1.jpg" width="250px" height="197px"class="img-fluid" alt="">
               <img src="img/komik 1.png" class="img-fluid" alt="">
-                  <p>Attack on Titan, adalah sebuah seri manga shōnen asal Jepang yang ditulis dan diilustrasikan oleh Hajime Isayama. Ceritanya berlatar di dunia tempat umat manusia hidup di wilayah yang dikelilingi tiga lapis tembok besar, yang melindungi mereka dari makhluk pemakan manusia berukuran raksasa yang dikenal sebagai Titan. Manga ini dimuat berseri dalam majalah Bessatsu Shōnen Magazine terbitan Kodansha sejak bulan September 2009, dan telah diterbitkan menjadi 34 volume tankōbon per bulan Desember 2020.
+                  <p classs:"justify">Attack on Titan, adalah sebuah seri manga shōnen asal Jepang yang ditulis dan diilustrasikan oleh Hajime Isayama. Ceritanya berlatar di dunia tempat umat manusia hidup di wilayah yang dikelilingi tiga lapis tembok besar, yang melindungi mereka dari makhluk pemakan manusia berukuran raksasa yang dikenal sebagai Titan. Manga ini dimuat berseri dalam majalah Bessatsu Shōnen Magazine terbitan Kodansha sejak bulan September 2009, dan telah diterbitkan menjadi 34 volume tankōbon per bulan Desember 2020.
 
 Manga ini telah diadaptasi menjadi sebuah seri anime yang diproduksi oleh Wit Studio (musim 1–3) dan MAPPA (musim 4). Musim pertama yang terdiri dari 25 episode ditayangkan sejak bulan April hingga September 2013, diikuti oleh musim kedua sebanyak 12 episode dari bulan April hingga Juni 2017. Musim ketiga yang terdiri dari 22 episode ditayangkan menjadi dua bagian. 12 episode pertama ditayangkan sejak bulan Juli hingga Oktober 2018 dan 10 episode tersisa ditayangkan sejak bulan April hingga Juli 2019. Musim keempat sekaligus terakhir ditayangkan sejak bulan Desember 2020.
 
@@ -102,7 +104,7 @@ Attack on Titan telah meraih kesuksesan kritis dan komersial. Per bulan Desember
               <img src="img/komik 2.png" class="img-fluid" alt="">
               <img src="img/komik 3.jpg" width="250px" height="197px"class="img-fluid" alt="">
               <img src="img/komik 2.png" class="img-fluid" alt="">
-                  <p>Apotheosis berawal dengan kisah Luo Zheng, putra pertama keluarga Luo yang kehilangan segalanya setelah ayahnya meninggal dunia. Keluarga pamannya mengambil alih status dan kedudukan sebagai keluarga utama Luo. Sementara Luo Zheng dipenjara dan dijadikan sasaran untuk latihan bela diri bagi klan keluarganya sendiri.
+                  <p class:"justify">Apotheosis berawal dengan kisah Luo Zheng, putra pertama keluarga Luo yang kehilangan segalanya setelah ayahnya meninggal dunia. Keluarga pamannya mengambil alih status dan kedudukan sebagai keluarga utama Luo. Sementara Luo Zheng dipenjara dan dijadikan sasaran untuk latihan bela diri bagi klan keluarganya sendiri.
 
 Selama dua tahun penuh, Luo Zheng dihajar habis-habisan, namun dia bertahan dengan gigih. Dia sama sekali tidak peduli meski dirinya dianggap sebagai budak dan dijadikan target latihan.
 
