--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@
 
         <header class="section-header">
           <h3>About Us</h3>
-          <p class:"justify">Taukah kalian ini weebsite pertama saya weebsite ini akan berisi komik-komik anime dan semoga weebsite bisa terus berkembang dan semoga banyak peminat yang pembaca komik di Mangan Well ini. </p>
+          <p class="justify">Taukah kalian ini weebsite pertama saya weebsite ini akan berisi komik-komik anime dan semoga weebsite bisa terus berkembang dan semoga banyak peminat yang pembaca komik di Mangan Well ini dan karena website ini dalam pembuatan jadi belum tersedia untuk mebaca komik. </p>
 <div class="row">
             <div class="member">
   <h3>Tentang Saya</h3>
-    <img src="img/photo.jpg" width="350px" height="197px" class="img-fluid" alt="center">
-    <p class:"justify">dan perkenalkan nama saya Fathur Rahman S. atau dipanggil Fatur  saya lahir pada tanggal 02-februari-2004 . tinggal di Desa Damit Rt 04 atau di Indonesia kota Tanah Grogot, kalimantan timur dan saya sekolah di SMKN 1 Tanah Grogot kelas XI (2020) dan mengambil jurusan Rekayasa Perangkat Lunak (RPL). Terima Kasih :). </p>
+    <img src="img/photo.jpg" width="350" height="550" style="display: block; margin: auto;">
+
+    <p class="justify">dan Hallo semuanya perkenalkan nama saya Fathur Rahman S. atau dipanggil Fatur  saya lahir pada tanggal 02-februari-2004. tinggal di Desa Damit Rt 04 atau di Indonesia kota Tanah Grogot, kalimantan timur dan saya sekolah di SMKN 1 Tanah Grogot kelas XI (2020) dan mengambil jurusan Rekayasa Perangkat Lunak (RPL) Terima Kasih :). </p>
         </header>
       </div>
       </div>
@@ -78,7 +79,7 @@
       <div class="container">
         <div class="section-header">
           <h3>Komik</h3>
-          <p class:"justify">Komik ini Tersedia dari Manga, Manhua atau jepang, cina.</p>
+          <p>Komik ini Tersedia dari Manga, Manhua atau jepang, cina.</p>
         </div>
 
         <div class="row">
@@ -86,14 +87,13 @@
 
             <div class="member">
               <h3>1.Manga</h3>
-              <img src="img/komik 1.png" class="img-fluid" alt="">
-              <img src="img/komik 1.jpg" width="250px" height="197px"class="img-fluid" alt="">
-              <img src="img/komik 1.png" class="img-fluid" alt="">
-                  <p classs:"justify">Attack on Titan, adalah sebuah seri manga shōnen asal Jepang yang ditulis dan diilustrasikan oleh Hajime Isayama. Ceritanya berlatar di dunia tempat umat manusia hidup di wilayah yang dikelilingi tiga lapis tembok besar, yang melindungi mereka dari makhluk pemakan manusia berukuran raksasa yang dikenal sebagai Titan. Manga ini dimuat berseri dalam majalah Bessatsu Shōnen Magazine terbitan Kodansha sejak bulan September 2009, dan telah diterbitkan menjadi 34 volume tankōbon per bulan Desember 2020.
+              <img src="img/komik 1.jpg" width="350" height="550" style="display: block; margin: auto;">
+                  <p class="justify">Attack on Titan, adalah sebuah seri manga shōnen asal Jepang yang ditulis dan diilustrasikan oleh Hajime Isayama. Ceritanya berlatar di dunia tempat umat manusia hidup di wilayah yang dikelilingi tiga lapis tembok besar, yang melindungi mereka dari makhluk pemakan manusia berukuran raksasa yang dikenal sebagai Titan. Manga ini dimuat berseri dalam majalah Bessatsu Shōnen Magazine terbitan Kodansha sejak bulan September 2009, dan telah diterbitkan menjadi 34 volume tankōbon per bulan Desember 2020.
 
 Manga ini telah diadaptasi menjadi sebuah seri anime yang diproduksi oleh Wit Studio (musim 1–3) dan MAPPA (musim 4). Musim pertama yang terdiri dari 25 episode ditayangkan sejak bulan April hingga September 2013, diikuti oleh musim kedua sebanyak 12 episode dari bulan April hingga Juni 2017. Musim ketiga yang terdiri dari 22 episode ditayangkan menjadi dua bagian. 12 episode pertama ditayangkan sejak bulan Juli hingga Oktober 2018 dan 10 episode tersisa ditayangkan sejak bulan April hingga Juli 2019. Musim keempat sekaligus terakhir ditayangkan sejak bulan Desember 2020.
 
-Attack on Titan telah meraih kesuksesan kritis dan komersial. Per bulan Desember 2019, manga ini telah terjual sebanyak lebih dari 100 juta kopi dalam bentuk cetak di seluruh dunia, membuatnya menjadi salah satu seri manga terlaris sepanjang sejarah. Manga ini telah memenangkan beberapa penghargaan, seperti Penghargaan Manga Kodansha, Penghargaan Micheluzzi, dan Penghargaan Harvey.Adaptasi anime-nya diterima dengan baik oleh para kritikus, dan tiga musim pertamanya mendapatkan pengakuan kritis dan pujian terhadap alur cerita, animasi, musik, dan sulih suaranya. Anime-nya juga terbukti sangat sukses di AS dan Jepang, dan meningkatkan popularitas manga ini. Meskipun Attack on Titan juga menjadi populer di negara Asia lainnya, interpretasi politik atas manga ini menimbulkan kontroversi di Tiongkok dan Korea Selatan..</p>
+Attack on Titan telah meraih kesuksesan kritis dan komersial. Per bulan Desember 2019, manga ini telah terjual sebanyak lebih dari 100 juta kopi dalam bentuk cetak di seluruh dunia, membuatnya menjadi salah satu seri manga terlaris sepanjang sejarah. Manga ini telah memenangkan beberapa penghargaan, seperti Penghargaan Manga Kodansha, Penghargaan Micheluzzi, dan Penghargaan Harvey.Adaptasi anime-nya diterima dengan baik oleh para kritikus, dan tiga musim pertamanya mendapatkan pengakuan kritis dan pujian terhadap alur cerita, animasi, musik, dan sulih suaranya. Anime-nya juga terbukti sangat sukses di AS dan Jepang, dan meningkatkan popularitas manga ini. Meskipun Attack on Titan juga menjadi populer di negara Asia lainnya, interpretasi politik atas manga ini menimbulkan kontroversi di Tiongkok dan Korea Selatan..</p >
+
              </div>
          </div>
 
@@ -101,10 +101,8 @@ Attack on Titan telah meraih kesuksesan kritis dan komersial. Per bulan Desember
 
             <div class="member">
               <h3>2.Manhua</h3>
-              <img src="img/komik 2.png" class="img-fluid" alt="">
-              <img src="img/komik 3.jpg" width="250px" height="197px"class="img-fluid" alt="">
-              <img src="img/komik 2.png" class="img-fluid" alt="">
-                  <p class:"justify">Apotheosis berawal dengan kisah Luo Zheng, putra pertama keluarga Luo yang kehilangan segalanya setelah ayahnya meninggal dunia. Keluarga pamannya mengambil alih status dan kedudukan sebagai keluarga utama Luo. Sementara Luo Zheng dipenjara dan dijadikan sasaran untuk latihan bela diri bagi klan keluarganya sendiri.
+              <img src="img/komik 3.jpg" width="350" height="550" style="display: block; margin: auto;">
+                  <p class="justify">Apotheosis berawal dengan kisah Luo Zheng, putra pertama keluarga Luo yang kehilangan segalanya setelah ayahnya meninggal dunia. Keluarga pamannya mengambil alih status dan kedudukan sebagai keluarga utama Luo. Sementara Luo Zheng dipenjara dan dijadikan sasaran untuk latihan bela diri bagi klan keluarganya sendiri.
 
 Selama dua tahun penuh, Luo Zheng dihajar habis-habisan, namun dia bertahan dengan gigih. Dia sama sekali tidak peduli meski dirinya dianggap sebagai budak dan dijadikan target latihan.
 
@@ -188,22 +186,23 @@ Mendengar kabar itu, Luo Zheng bertekad untuk pergi meninggalkan klan Luo dan me
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-6 col-md-6 footer-info">
+          <div class="col-lg-4 col-md-6 footer-info">
             <h3>Manga Well</h3>
-            <p>Manga Well ini masih dalam tahapan pembuatan jadi masih tentang komik.</p>
+            <p class="justify">Hallo semua ini adalah web pertama saya yang bernama Manga Well dan web ini masih dalam tahapan pembuatan jadi belum ada komik sesuai dengan namanya manga Well web ini aka di isi fitur fitur membaca komik dan keadaan masih dalam pembuatan jadi masih belum ada.</p>
           </div>
           <p>
           </p>
-           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+           <div class="col-lg-4 col-md-6 footer-links">
+            <h4 class="center">Useful Links</h4>
             <ul>
-              <li><a href="#about">About us</a></li>
-              <li><a href="#komik">komik</a></li>
-              <li><a href="#contact">Contact Us</a></li>
+
+              <li class="center"><a href="#">Home</a></li>
+              <li class="center"><a href="#">About us</a></li>
+              <li class="center"><a href="#">komik</a></li>
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-6 footer-contact">
+          <div class="col-lg-4 col-md-6 footer-contact">
             <h1>Contact Us</h1>
             <p>
               Fathur Rahman S. <br>
@@ -215,23 +214,19 @@ Mendengar kabar itu, Luo Zheng bertekad untuk pergi meninggalkan klan Luo dan me
 
             <div class="social-links">
               <a href="https://web.facebook.com/Fatur Rahman" class="facebook"><i class="fa fa-facebook"></i></a>
-           
+             
             </div>
+            <div class="col-lg-4 col-md-6 footer-contact">
+            Powered by <a href="https://gamelab.id">GameLab.id</a>
+          </div>
+
 
           </div> 
 
         </div>
       </div>
     </div>
-
-    <div class="container">
-   <div class="credits">
-        Powered by <a href="https://gamelab.id">GameLab.id</a>
-      </div>
-    </div>
-    </div>
-  </footer>
-
+</footer>
   
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
@@ -253,4 +248,3 @@ Mendengar kabar itu, Luo Zheng bertekad untuk pergi meninggalkan klan Luo dan me
 
 </body>
 </html>
-
